# GameOfLifeCPlus

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
includes/glad/: glad.h
libs/: glad.c
resources/shaders/: default.frag  default.vert  gof.frag  gof.vert  gof_display.frag
src/: Game.cpp  Game.h  GameManager.cpp  GameManager.h  dot.h
src/gfx/: EBO.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.h  TerminalRenderer.cpp  TerminalRenderer.h  VAO.cpp  VAO.h  VBO.h
src/gfx/engine/: EBO.cpp  EBO.h  EngineManager.cpp  EngineManager.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/gfx/renderer/: OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShaderRenderer.cpp  OpenGLShaderRenderer.h  TerminalRenderer.cpp  TerminalRenderer.h
src/gfx/shader/: Shader.cpp  Shader.h
